<resources>
    <string name="login_aty_input_email_phone">Enter phone/email</string>
    <string name="regist_wrong_account">Imcorrect phone/email</string>
    <string name="regist_wrong_email">Incorrect email</string>
    <string name="error_toast_timeout">Connection timed out</string>
    <string name="main_aty_my_robot">My robot</string>
    <string name="main_aty_add_robot">Add a robot</string>
    <string name="main_aty_press_exit">Press again to exit</string>
    <string name="select_x_aty_add">Add a robot</string>
    <string name="guide_ap_prepare">Preparing to find a network</string>
    <string name="guide_aty_next">Next</string>
    <string name="add_aty_no_wifi">Choose a home network</string>
    <string name="ap_guide_gps_cancel">Cancel</string>
    <string name="ap_guide_gps_open">Open</string>
    <string name="ap_aty_input_pass">Password</string>
    <string name="ap_aty_input_wifi_ssid">Home network</string>
    <string name="add_aty_start_connect">Start connecting</string>
    <string name="add_aty_wrong_wifi_pass">Password contains illegal characters</string>
    <string name="ap_guide_aty_tip1_x800">Turn on power switch on the side of the main body.(Note:Don\'t connect to network while the main body is charging)</string>
    <string name="ap_guide_sty_typ2_x800">Press and hold the button until voice announcement says\"Starting WiFi pairing mode\".WiFi light starts blinking.</string>
    <string name="ap_guide_sty_typ2_x320">Press and hold AP network distribution key for 3 seconds and you will hear a buzz. Don\'t release until you hear two buzzes. Robot enters AP mode and WiFi light starts blinking.</string>
    <string name="ap_guide_sty_typ2_X787">Press and hold AP network distribution key until you hear two buzzes.Robot enters AP mode and WiFi light starts blinking.</string>
    <string name="ap_guide_tip4">No voice announcement.Retry previous steps.</string>
    <string name="ap_guide_already_open_device">Robot already switched on</string>
    <string name="ap_guide_already_open_wifi">\"Starting WiFi pairing mode\"already announced</string>
    <string name="ap_guide_already_heared_didi">\"beep\"is heard</string>
    <string name="ap_aty_setting">Settings</string>
    <string name="wifi_guide_aty_tip2">Note:Can\'t be connected to 5G WiFi</string>
    <string name="third_ap_aty_port_">Choose the network starting with adh_,</string>
    <string name="bind_suc_aty_name">Name your robot</string>
    <string name="bind_suc_sty_robot_done">Completed</string>
    <string name="bind_aty_reName_suc">Change completed</string>
    <string name="bind_aty_reName_fail">Change failed</string>
    <string name="open_gps_location">Enable GPS</string>
    <string name="open_gps_location_tip">Automatically access to home network once the location services is turned on</string>
    <string name="please_not_exit_app">Don\'t move APP to background</string>
    <string name="ap_wifi_guide">Connecting to home network</string>
    <string name="device_adapter_device_online">Online</string>
    <string name="device_adapter_device_offline">Offline</string>
    <string name="main_aty_unbind_device">Unbind the device</string>
    <string name="main_aty_unbind_device_tip">Unbind the device now?</string>
    <string name="main_aty_unbind_fail">Unbinding failed</string>
    <string name="dev_frag_offline">Device is offline</string>
    <string name="dev_frag_try">Check if WiFi is working. Refresh the page if connection is working</string>
    <string name="personal_aty_personal_center">My account</string>
    <string name="personal_aty_set_name">User name</string>
    <string name="personal_aty_help">Help</string>
    <string name="personal_aty_scan">Scan</string>
    <string name="personal_aty_share">Share a device</string>
    <string name="personal_aty_version">VersionV%1$s %2$s</string>
    <string name="user_agreement">Privacy policy &amp; service agreements</string>
    <string name="personal_aty_protocol">Privacy policy and service agreement</string>
    <string name="personal_aty_protocol_privacy">Privacy policy</string>
    <string name="personal_aty_protocol_agreement">Service agreement</string>
    <string name="personal_acy_exit">Logoff</string>
    <string name="personal_aty_cancel">Cancel</string>
    <string name="dialog_del_confirm">Confirm</string>
    <string name="confirm">Completed</string>
    <string name="setting_aty_devName_null">Enter user name</string>
    <string name="personal_aty_reset_suc">User name change completed</string>
    <string name="personal_aty_rename">Reset user name</string>
    <string name="personal_aty_reset_fail">User name change failed</string>
    <string name="personal_aty_exit_content">Logoff and retain all history</string>
    <string name="personal_aty_no_shareable">You don\'t have any device to share</string>
    <string name="personal_aty_bind_done">Binding completed</string>
    <string name="personal_aty_bind_fail">Binding failed</string>
    <string name="help_aty_commit_suc">Submitted</string>
    <string name="help_aty_commit">Submit failed, please try again</string>
    <string name="personal_aty_scan_code">Scan QR code to bind to a robot</string>
    <string name="personal_aty_support">Technical support</string>
    <string name="personal_aty_feedback">Feedback</string>
    <string name="personal_input_email">Enter email</string>
    <string name="help_aty_chose_product_type">Select product model</string>
    <string name="help_aty_chose_product">Please select your robot modle</string>
    <string name="help_aty_choose_question_type">Please select a type of your question</string>
    <string name="help_question_device">Equipment problem</string>
    <string name="help_question_binding">Distribution network problem</string>
    <string name="help_question_other">Other problems</string>
    <string name="help_confirm_question">Submit</string>
    <string name="help_aty_content">Detail the issues you\'ve encountered</string>
    <string name="capture_aty_scan">Scan QR code or barcode inside the square on the screen</string>
    <string name="setting_aty_area">Cleaning area</string>
    <string name="setting_aty_end_reason">Task terminated:%1$s</string>
    <string name="map_aty_time">Cleaning time</string>
    <string name="map_aty_remaining_charge">Battery</string>
    <string name="map_aty_exception">Error</string>
    <string name="map_aty_sleep">Hibernate</string>
    <string name="map_aty_standby_mode">Standby</string>
    <string name="map_aty_random">Auto</string>
    <string name="map_aty_along">Edge</string>
    <string name="map_aty_along_ing">Edge</string>
    <string name="map_aty_point">Spot</string>
    <string name="map_aty_point_ing">Spot</string>
    <string name="map_aty_plan_mode">S-shaped</string>
    <string name="map_aty_charge">Charging now</string>
    <string name="map_aty_remote">Remote control</string>
    <string name="map_aty_remote_ing">Remote mode</string>
    <string name="map_aty_stop">Pause</string>
    <string name="map_aty_start">Start</string>
    <string name="map_aty_appoint">Schedule</string>
    <string name="map_aty_recharge">Recharge</string>
    <string name="map_aty_recharging">Return to recharge</string>
    <string name="map_aty_use_left">Left</string>
    <string name="map_aty_use_right">Right</string>
    <string name="map_aty_use_forward">Forward</string>
    <string name="map_aty_can_not_execute">Can\'t be operated</string>
    <string name="adapter_error_bxg">Bumper error</string>
    <string name="adapter_error_obs">OBS parts error</string>
    <string name="adapter_error_yq">Edge cleaning parts error</string>
    <string name="adapter_error_td">Detectors error</string>
    <string name="dev_error_xuankong">Robot isn\'t on a flat surface</string>
    <string name="adapter_error_wxl">Nosewheel error</string>
    <string name="adapter_error_zbs">Left brush error</string>
    <string name="adapter_error_ybs">Right brush error</string>
    <string name="adapter_error_zbl">Left side wheel error</string>
    <string name="adapter_error_ybl">Right side wheel error</string>
    <string name="adapter_error_fs">Fan error</string>
    <string name="adapter_error_sb">Water pump error</string>
    <string name="adapter_error_qb">Air pump error</string>
    <string name="adapter_error_ljx">Dustbin error</string>
    <string name="adapter_error_sx">Water tank error</string>
    <string name="adapter_error_lw">Filter error</string>
    <string name="adapter_error_dc">Battery error</string>
    <string name="adapter_error_tly">Gyroscope error</string>
    <string name="adapter_error_ld">Radar error</string>
    <string name="adapter_error_sxt">Camera error</string>
    <string name="adapter_error_gl">Optical flow component error</string>
    <string name="adapter_error_qt">Other errors</string>
    <string name="setting_aty_type">Model number:</string>
    <string name="clock_aty_appoint">Schedule</string>
    <string name="setting_aty_clean_record">Cleaning history</string>
    <string name="setting_aty_consume_detail">Parts maintenance</string>
    <string name="setting_aty_water_control">Water level control</string>
    <string name="setting_aty_clean_mode1">Cleaning modes</string>
    <string name="setting_aty_max_suction">Max mode</string>
    <string name="setting_aty_find_robot">Search robot</string>
    <string name="setting_aty_factory_reset">Reset to factory default</string>
    <string name="setting_aty_standard">Standard</string>
    <string name="setting_aty_soft">Gentle</string>
    <string name="setting_aty_strong">Strong</string>
    <string name="setting_aty_nav_clean">S-shaped</string>
    <string name="setting_aty_random_clean">Auto</string>
    <string name="setting_aty_confirm_reset">Reset to factory default now</string>
    <string name="setting_aty_reset_hint">All data will be erased</string>
    <string name="setting_aty_hit">Give your robot a nickname</string>
    <string name="setting_rename_empty">Give your robot a nickname</string>
    <string name="setting_rename_robot">Reset nickname</string>
    <string name="setting_aty_only_admin">Operation: manager only</string>
    <string name="clock_aty_set_time">Schedule</string>
    <string name="tip_troubleshoot">Follow the steps below to find the possible causes:</string>
    <string name="tip_troubles">1. Is WiFi password correct?   2.Are you in  SmartLink mode?    3. Are 2.4GHz wireless router and 5Hz network under different names? Connect mobile phone to 2.4GHz wireless router.   4. Have you disabled wireless router blacklist function? (MAC filtering)</string>
    <string name="retry">Retry</string>
    <string name="ap_wifi_timeout">Connection timed out</string>
    <string name="cancel_">Cancel</string>
    <string name="week_monday">Mon</string>
    <string name="clock_area_default">Default</string>
    <string name="clock_schedule_time">Schedule</string>
    <string name="clock_repeat">Repeat</string>
    <string name="clock_clean_times">Cleaning frequency</string>
    <string name="clock_edit_choose_area">Select area</string>
    <string name="map_move_map">Map operation</string>
    <string name="map_virtual">Electrowall</string>
    <string name="map_carpet_area">Carpet area</string>
    <string name="map_global_area">No-go zone</string>
    <string name="btn_save">Save</string>
    <string name="setting_set_language">Multi-language</string>
    <string name="volume_adjust">Volume setting</string>
    <string name="no_disturb_mode">Do not disturb mode</string>
    <string name="no_disturb_mode_tip">After opening, do not disturb the scheduled cleaning and breakpoint continued scanning, and turn off the sweeper voice during the time</string>
    <string name="no_disturb_mode_time_bucket">Do not disturb time period</string>
    <string name="no_disturb_mode_start_time">Starting time</string>
    <string name="no_disturb_mode_end_time">End Time</string>
    <string name="open">On</string>
</resources>