<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/template_top_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/shape_gradient_map_bg"
        android:orientation="vertical">

        <com.ilife.home.robot.view.MapView
            android:id="@+id/map_edit_vw"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
           />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="用手指在地图上相应的位置划线即可添加虚拟墙/禁区"
            android:textColor="@color/white"
            android:textSize="@dimen/dp_12" />

        <RadioGroup
            android:id="@+id/rg_vw_fbd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_margin="@dimen/dp_12"
            android:background="@drawable/bg_shape_radius_16"
            android:orientation="horizontal"
            android:paddingTop="@dimen/dp_14"
            android:paddingBottom="@dimen/dp_14">

            <RadioButton
                android:button="@null"
                android:id="@+id/tv_move_map"
                style="@style/map_text_button"
                android:drawableTop="@drawable/selector_select_map"
                android:text="@string/map_move_map" />


            <RadioButton
                android:button="@null"
                android:id="@+id/tv_virtual"
                style="@style/map_text_button"
                android:drawableTop="@drawable/selector_virtual_wall"
                android:text="@string/map_virtual" />

            <RadioButton
                android:button="@null"
                android:id="@+id/tv_mop_area"
                style="@style/map_text_button"
                android:drawableTop="@drawable/selector_mop_area"
                android:text="@string/map_carpet_area" />

            <RadioButton
                android:button="@null"
                android:id="@+id/map_global_area"
                style="@style/map_text_button"
                android:drawableTop="@drawable/selector_global_area"
                android:text="@string/map_global_area" />
        </RadioGroup>
    </LinearLayout>
</LinearLayout>