<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_shape_top_radius"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_text_selector_title"
        style="@style/Text_18sp_33"
        android:layout_marginTop="@dimen/dp_30"
        android:text="@string/clock_repeat" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_text_selector"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_8" />

    <LinearLayout
        android:id="@+id/ll_text_selector_action_container"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:layout_marginTop="@dimen/dp_24"
        android:layout_marginStart="@dimen/dp_24"
        android:layout_marginEnd="@dimen/dp_24"
        android:layout_marginBottom="@dimen/dp_24"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_dismiss_text_selector"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp_48"
            android:layout_weight="1"
            android:background="@drawable/shape_bg_gray"
            android:text="@string/cancel_" />

        <Space
            android:layout_width="@dimen/dp_20"
            android:layout_height="match_parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_save_text"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp_48"
            android:layout_weight="1"
            android:background="@drawable/shape_bg_color"
            android:text="@string/btn_save" />
    </LinearLayout>
</LinearLayout>