<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/dp_300"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/qr_code_bg"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:layout_marginTop="@dimen/dp_18"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_48"
        android:gravity="center"
        android:text="@string/clock_aty_set_time"
        android:textColor="@color/color_33"
        android:textSize="16sp" />


    <TimePicker
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginBottom="@dimen/dp_10"
        android:id="@+id/timePicker"
        android:layout_width="wrap_content"
        android:layout_weight="1"
        android:layout_height="0dp"
        android:theme="@style/Theme.picker"
        android:timePickerMode="spinner" />


    <LinearLayout
        android:layout_marginEnd="@dimen/dp_24"
        android:layout_marginStart="@dimen/dp_24"
        android:layout_marginBottom="@dimen/dp_24"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_36">

        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/shape_bg_clock_cancel"
            android:gravity="center"
            android:text="@string/personal_aty_cancel"
            android:textColor="@color/color_33"
            android:textSize="16sp" />
        <Space
            android:layout_width="@dimen/dp_32"
            android:layout_height="match_parent"/>
        <TextView
            android:id="@+id/tv_confirm"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/shape_bg_clock_cancel"
            android:gravity="center"
            android:text="@string/confirm"
            android:textColor="@color/color_ff4d00"
            android:textSize="16sp" />
    </LinearLayout>

</LinearLayout>